Closed
Bug 450864
Opened 17 years ago
Closed 17 years ago
c++ style comment in parser/expat/lib/moz_extensions.c
Categories
(Core :: XML, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: ul-mcamafia, Assigned: ul-mcamafia)
Details
(Keywords: verified1.8.1.18, Whiteboard: [branch only])
Attachments
(1 file)
|
937 bytes,
patch
|
peterv
:
review+
peterv
:
superreview+
dveditz
:
approval1.8.1.18+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; AIX 5.1; en-US; rv:1.8.1.16) Gecko/20080806 Firefox/2.0.0.16
Build Identifier: MOZILLA_1_8_BRANCH
build bustage due to illegal C code
MOZILLA_1_8_BRANCH is not required a C99 C compiler, so c++ style comments are illegal in .c files
Reproducible: Always
Steps to Reproduce:
1. compile on AIX 4.3.3 or AIX 5.1 with VisualAge 5.0.2.9
Actual Results:
compilation error
Expected Results:
successfull compilation
| Assignee | ||
Comment 1•17 years ago
|
||
Trunk and fx 3.0 requires a C99 compiler, so no problems with c++ style comments in c files.
Attachment #334075 -
Flags: review?(peterv)
| Assignee | ||
Updated•17 years ago
|
Attachment #334075 -
Attachment is patch: true
Attachment #334075 -
Attachment mime type: application/octet-stream → text/plain
| Assignee | ||
Updated•17 years ago
|
Version: unspecified → 1.8 Branch
| Assignee | ||
Updated•17 years ago
|
Severity: minor → normal
Flags: blocking1.8.1.18?
Comment 2•17 years ago
|
||
Comment on attachment 334075 [details] [diff] [review]
replaces c++ with c style comment only
This was already fixed on 1.9/trunk. No functional changes, just a fix to make it compile with more compilers.
Attachment #334075 -
Flags: superreview+
Attachment #334075 -
Flags: review?(peterv)
Attachment #334075 -
Flags: review+
Attachment #334075 -
Flags: approval1.8.1.18?
Updated•17 years ago
|
Attachment #334075 -
Flags: approval1.8.1.18? → approval1.8.1.18+
Updated•17 years ago
|
Keywords: checkin-needed
Updated•17 years ago
|
Assignee: nobody → ul.mcamafia
Comment 4•17 years ago
|
||
(In reply to comment #2)
> This was already fixed on 1.9/trunk
by
http://bonsai.mozilla.org/cvslog.cgi?file=mozilla/parser/expat/lib/moz_extensions.c&mark=1.10
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: in-testsuite-
Whiteboard: [c-n: 1.8.1 branch only]
Comment 5•17 years ago
|
||
Checking in parser/expat/lib/moz_extensions.c;
/cvsroot/mozilla/parser/expat/lib/moz_extensions.c,v <-- moz_extensions.c
new revision: 1.6.18.2; previous revision: 1.6.18.1
done
->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed → fixed1.8.1.18
Resolution: --- → FIXED
Whiteboard: [c-n: 1.8.1 branch only] → [branch only]
Updated•17 years ago
|
Status: RESOLVED → VERIFIED
Keywords: fixed1.8.1.18 → verified1.8.1.18
You need to log in
before you can comment on or make changes to this bug.
Description
•