Bug 450864 -  c++ style comment in parser/expat/lib/moz_extensions.c p=Uli Link <ul.mcamafia@linkitup.de> r+sr=peterv, approval1.8.1.18=dveditz